<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微涂鸦</string>
    <string name="appname">微涂鸦</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="line">直线</string>
    <string name="rectangle">长方形</string>
    <string name="circle">圆形</string>
    <string name="triangle">三角形</string>
    <string name="cube">立方体</string>
    <string name="column">圆柱体</string>    
    <string name="draw">涂鸦</string>
    <string name="submit">上传</string>
    <string name="comment">评论</string>
    <string name="localsave">保存</string>
    <string name="localdelete">删除</string>
    <string name="writeComment">发评论</string>
    <string name="send">发送</string>
    <string name="cancel">取消</string>
    <string name="hint">请输入评论</string>
    <string name="writehint">请写入文字</string>
    <string name="newCanvas">新画布</string>
    <string name="localGallery">本地画廊</string>
    <string name="societyGallery">社区画廊</string>
    <string name="upload">登陆</string>
    <string name="alert">请重新设置边框</string>
    <string name="layer">分层图</string>
    <string name="compose">合成</string>
    <string name="choosePaint">请选择画图工具</string>
    <string name="paintTools">画图工具</string>
    <string name="paintStyles">画笔样式</string>
    <string name="pencil">签字笔</string>
    <string name="qianbimohu">铅笔模糊</string>
    <string name="maobifudiao">毛笔浮雕</string>
    <string name="writetext">文字</string>
    <string name="sure">确定</string>
    <string name="delete">全部撤销</string>
    <string name="delete1">撤销</string>
    <string name="text">文字</string>
    <string name="adjustRectangleSize">你选定的面积太小哦~~</string>
    <string name="textsize">文字大小</string>
    <string name="saveFirst">请先保存当前图层</string>
    <string name="noTuyaLayer">没有涂鸦图片</string>
    <string name="failToget">获取失败</string>
    <string name="failTosuccess">连接失败</string>
    <string name="loadAll">已加载完全部数据</string>
    <string name="noComments">暂无评论</string>
    <string name="successTosubmit">上传成功</string>
    <string name="failTosubmit">上传失败</string>
    <string name="failTosave">保存失败</string>
    <string name="successTosave">保存成功</string>
    <string name="ReadTimeout">读取数据超时</string>
    <string name="ConnectTimeout">连接超时</string>
    <string name="NoPic">图片已加载完</string>
    <string name="undo">上一步</string>
    <string name="redo">下一步</string>
    <string name="haveCleared">已清除全部文件哦~~</string>
    <string name="clickagain">再按一次就退出哦~~~</string>
    <string name="application_title">DrawDemo</string>
    <string name="save_alert">是否保存</string> 
    <string name="submit_alert">是否上传</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="colorvalue">色值</string>
    <string name="brightness">亮度</string>
    <string name="transparency">透明度</string>
    <string name="paintsize">画笔大小</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="remote_uploadBycode">二维码迁移登陆</string>
    <string name="remote_upload">迁移登陆</string>
    <string name="PleaseInput">请输入评论</string>
    <string name="MyGallery">我的画廊</string>
    <string name="Account">账户</string>
    <string name="NeedToReUpload">用户身份已过期，是否重新验证</string>
    <string name="FailToNotify">身份验证失败</string>
    <string name="FailToGetTitle">头像同步失败</string>
    <string name="local_user">本地账户</string>
    <string name="remote_user">迁移账户</string>
    <string name="themeSet">设置为主题</string>
    <string name="ifDeleteAllLayers">是否删除所有图层</string>
    <string name="DrawBeforSave">请先涂鸦再保存哦~~</string>
    <string name="DrawBeforeSubmit">不能交白卷哦~~</string>
    <string name="NotInternet">未检测到可用网络，请先连接网络</string>
    <string name="SetSdCardBeforeSave">请先插入SD卡</string>
    <string name="NoSdCardNotSave">未检测到SD卡 ，无法保存</string>
    <string name="NoInternetNotSubmit">未检测到可用网络 ，无法上传</string>
    <string name="AddBeforeUndo">请先保存新添加的图层，不然会丢失哦~~</string>
    
    
    <string name="imageURL">http://tuya.webapp.163.com/tuya/images</string>
    <string name="getPicURL">http://tuya.webapp.163.com/images</string>
    <string name="getTuyaLayerURL">http://tuya.webapp.163.com/pics</string>
    <string name="CommentURL">http://tower.dev.webapp.163.com:8006</string>
    <string name="offerCommentURL">http://tower.dev.webapp.163.com:8006/comment</string>
    <string name="getCommentsURL">http://tower.dev.webapp.163.com:8006/get-comments</string>
    <string name="submit_SocietyImageURL">http://tuya.webapp.163.com/upload/pic</string>
    <string name="submit_LocalImageURL">http://tuya.webapp.163.com/upload/image</string>
    <string name="submit_TitleImageURL">http://tuya.webapp.163.com/upload/avatar</string>
    <string name="getTitleImg">http://tuya.webapp.163.com/avatar</string>
    <string name="getUpLoadURL">http://tuya.webapp.163.com/login/get</string>
    <string name="getTUYAID_URL">http://tuya.webapp.163.com/login?device_id=</string>
    <string name="getMyPicInfoURL">http://tuya.webapp.163.com/pics/my</string>
    <string name="getThemePicURL"></string>
    <string name="getUserNameURL"></string>
   
</resources>
